--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow-x: hidden;">
 
 <head>
   <meta charset="utf-8" />
@@ -42,7 +42,7 @@
   <title>uletron.live</title>
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
